Refactored view position handling

--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -13,7 +13,7 @@ menu.participants = Teilnehmer:innen
 menu.fullscreen = Vollbild
 menu.advanced.settings = Erweiterte Einstellungen
 menu.toolbar.customize = Toolbar anpassen
-menu.external.windows = Externe Fenster
+menu.external.window = Externes Fenster
 menu.external.notes = Notizen
 menu.external.notes.disconnected = Notizen (Bildschirm getrennt)
 menu.external.slide.notes = Notiz-Folien
@@ -28,13 +28,16 @@ menu.external.speech = Redebeitrag
 menu.external.speech.disconnected = Redebeitrag (Bildschirm getrennt)
 menu.messages.position = Position der Nachrichten
 menu.notes.position = Position der Notizen
-menu.slide.notes.position = Position der Notiz-Folien
+menu.note.slide.position = Position der Notiz-Folien
+menu.note.slide.below.preview = Unter der Folienvorschau
 menu.participants.position = Position der Teilnehmer:innen
 menu.preview.position = Position der Folienvorschau
-menu.preview.bottom = Unter der Folienvorschau
+menu.speech.position = Position des Redebeitrags
+menu.speech.position.above.preview = \u00DCber der Folienvorschau
 menu.left = Links
 menu.bottom = Unten
 menu.right = Rechts
+menu.external = Extern
 menu.none = Ohne
 menu.whiteboard = Whiteboard
 menu.whiteboard.new = Whiteboard erstellen
