--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -13,7 +13,7 @@ menu.participants = Participants
 menu.fullscreen = Fullscreen
 menu.advanced.settings = Advanced settings
 menu.toolbar.customize = Customize toolbar
-menu.external.windows = External windows
+menu.external.window = External window
 menu.external.notes = Notes
 menu.external.slide.notes = Slide notes
 menu.external.notes.disconnected = Notes (Display disconnected)
@@ -27,13 +27,16 @@ menu.external.speech = Speech
 menu.external.speech.disconnected = Speech (Display disconnected)
 menu.messages.position = Messages position
 menu.notes.position = Notes position
-menu.slide.notes.position = Slide notes position
+menu.note.slide.position = Slide note position
+menu.note.slide.below.preview = Below the slide preview
 menu.participants.position = Participants position
 menu.preview.position = Slide preview position
-menu.preview.bottom = Below the slide preview
+menu.speech.position = Speech position
+menu.speech.position.above.preview = Above the slide preview
 menu.left = Left
 menu.bottom = Bottom
 menu.right = Right
+menu.external = External
 menu.none = None
 menu.whiteboard = Whiteboard
 menu.whiteboard.new = Create whiteboard
