Minor translation fixes

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -4,9 +4,9 @@ audio.device.disconnected = Audiogerät getrennt
 bookmark.assign.warning = Lesezeichen konnte nicht erstellt werden
 bookmark.delete.error = Lesezeichen konnte nicht gel\u00f6scht werden
 bookmark.goto.error = Lesezeichen konnte nicht angesprungen werden
-bookmark.key.exists = Ein Lesezeichen mit der Taste {0} existiert bereits
-bookmark.exists = Ein Lesezeichen auf aktueller Seite existiert bereits
-bookmark.key.not.existing = Ein Lesezeichen mit der Taste {0} existiert nicht
+bookmark.key.exists = Ein Lesezeichen mit der Taste {0} existiert bereits.
+bookmark.exists = Ein Lesezeichen existiert bereits f\u00fcr die aktuelle Folie.
+bookmark.key.not.existing = Ein Lesezeichen mit der Taste {0} existiert nicht.
 bookmark.created = Neues Lesezeichen erstellt: {0}
 bookmark.removed = Lesezeichen gel\u00f6scht: {0}
 
