--- a/lect-presenter-swing/src/main/resources/views/goto-bookmark/goto-bookmark_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/goto-bookmark/goto-bookmark_de_DE.properties
@@ -1,6 +1,6 @@
 goto.bookmark.title = Folien und Lesezeichen anspringen
 goto.bookmark.document = Dokument
-goto.bookmark.key = Taste
+goto.bookmark.key = Lesezeichentaste
 goto.bookmark.slide.number = Folien #
 goto.bookmark.delete = Lesezeichen l\u00f6schen
 
