--- a/lect-presenter-swing/src/main/resources/views/goto-bookmark/goto-bookmark_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/goto-bookmark/goto-bookmark_en_US.properties
@@ -1,6 +1,6 @@
 goto.bookmark.title = Navigate to slides and bookmarks
 goto.bookmark.document = Document
-goto.bookmark.key = Key
+goto.bookmark.key = Bookmark key
 goto.bookmark.slide.number = Slide #
 goto.bookmark.delete = Delete bookmark
 
