presenter: added shortcuts and manual menu items

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -88,3 +88,53 @@ role.participant = Teilnehmer:in
 
 presence.type.classroom = H\u00f6rsaal
 presence.type.stream = Stream
+
+shortcut.app.close = Anwendung schlieﬂen
+shortcut.view.close = Ansicht schlieﬂen
+shortcut.doc.open = Dokument \u00f6ffnen
+shortcut.doc.close = Dokument schlieﬂen
+shortcut.slide.first = Erste Folie ausw\u00e4hlen
+shortcut.slide.last = Letzte Folien ausw\u00e4hlen
+shortcut.slide.next = N\u00e4chste Folie
+shortcut.slide.skip_next_10 = 10 Folien weiter
+shortcut.slide.previous = Vorherige Folie
+shortcut.slide.skip_previous_10 = 10 Folien zur\u00fcck
+shortcut.slide.new = Neue Whiteboard-Folie
+shortcut.slide.delete = Whiteboard-Folie l\u00f6schen
+shortcut.overlay.start = Zur ersten Overlay-Folie
+shortcut.overlay.end = Zur letzten Overlay-Folie
+shortcut.overlay.previous = Zur ersten Folie vor dem Overlay
+shortcut.overlay.next = Zur n\u00e4chsten Folie nach dem Overlay
+shortcut.annotations.copy = Annotationen auf aktueller Folie kopieren
+shortcut.annotations.copy.to.next = Annotationen auf aktueller Folie der n\u00e4chsten Folie hinzuf\u00fcgen
+shortcut.tool.undo = R\u00fcckg\u00e4ngig
+shortcut.tool.redo = Wiederherstellen
+shortcut.tool.zoom.restore = Herauszoomen
+shortcut.tool.zoom.toggle = In die Folie zoomen
+shortcut.tool.zoom.pan = Gezoomte Folie scrollen
+shortcut.tool.clear = Alle Annotationen auf der Folie l\u00f6schen
+shortcut.tool.text = Texte erstellen
+shortcut.tool.pen = Stift-Annotationen erstellen
+shortcut.tool.highlighter = Highlighter-Annotationen erstellen
+shortcut.tool.pointer = Pointer
+shortcut.tool.eraser = Einzelne Annotationen l\u00f6schen
+shortcut.view.extend = Folienbereich erweitern
+shortcut.whiteboard.open = Whiteboard \u00f6ffnen
+shortcut.quiz.save = Quiz abspeichern
+shortcut.recording.pause = Aufzeichnung pausieren
+shortcut.bookmark.new = Lesezeichen erstellen
+shortcut.bookmark.goto = Lesezeichen anspringen
+shortcut.bookmark.current = Folie zu Lesezeichen hinzuf\u00fcgen
+shortcut.bookmark.goto.last = Letztes Lesezeichen anspringen
+shortcut.fullscreen = Vollbildmodus aktivieren/deaktivieren
+shortcut.grid.show = Gitternetz aktivieren/deaktivieren
+shortcut.grid.show.lecturer = Gitternetz nur Pr\u00e4sentierenden zeigen/verstecken
+shortcut.timer.start = Stoppuhr starten
+shortcut.timer.pause = Stoppuhr pausieren
+shortcut.timer.reset = Stoppuhr zur\u00fccksetzen
+shortcut.color.custom = Benutzerdefinierte Farbe
+shortcut.color.one = Farbe 1
+shortcut.color.two = Farbe 2
+shortcut.color.three = Farbe 3
+shortcut.color.four = Farbe 4
+shortcut.color.five = Farbe 5
