--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -88,3 +88,53 @@ role.participant = Participant
 
 presence.type.classroom = Classroom
 presence.type.stream = Stream
+
+shortcut.app.close = Close application
+shortcut.view.close = Close view
+shortcut.doc.open = Open document
+shortcut.doc.close = Close document
+shortcut.slide.first = Select first slide
+shortcut.slide.last = Select last slide
+shortcut.slide.next = Next slide
+shortcut.slide.skip_next_10 = 10 slides further
+shortcut.slide.previous = Previous slide
+shortcut.slide.skip_previous_10 = 10 slides back
+shortcut.slide.new = New whiteboard slide
+shortcut.slide.delete = Delete whiteboard slide
+shortcut.overlay.start = Select first overlay slide
+shortcut.overlay.end = Select last overlay slide
+shortcut.overlay.previous = Select first slide before the overlay
+shortcut.overlay.next = Select first slide after the overlay
+shortcut.annotations.copy = Copy annotations on current slide
+shortcut.annotations.copy.to.next = Add annotations on current slide to the next slide
+shortcut.tool.undo = Undo
+shortcut.tool.redo = Redo
+shortcut.tool.zoom.restore = Zoom out
+shortcut.tool.zoom.toggle = Zoom into the slide
+shortcut.tool.zoom.pan = Scroll zoomed slide
+shortcut.tool.clear = Delete all annotations on the slide
+shortcut.tool.text = Create texts
+shortcut.tool.pen = Create pen annotations
+shortcut.tool.highlighter = Create highlighter annotations
+shortcut.tool.pointer = Pointer
+shortcut.tool.eraser = Delete individual annotations
+shortcut.view.extend = Expand slide area
+shortcut.whiteboard.open = Open whiteboard
+shortcut.quiz.save = Save quiz
+shortcut.recording.pause = Pause recording
+shortcut.bookmark.new = Create bookmark
+shortcut.bookmark.goto = Go to bookmark
+shortcut.bookmark.current = Add slide to bookmarks
+shortcut.bookmark.goto.last = Go to last bookmark
+shortcut.fullscreen = Activate and deactivate full screen mode
+shortcut.grid.show = Activate and deactivate grid
+shortcut.grid.show.lecturer = Show and hide grid only to presenters
+shortcut.timer.start = Start stopwatch
+shortcut.timer.pause = Pause stopwatch
+shortcut.timer.reset = Reset stopwatch
+shortcut.color.custom = Custom color
+shortcut.color.one = Color 1
+shortcut.color.two = Color 2
+shortcut.color.three = Color 3
+shortcut.color.four = Color 4
+shortcut.color.five = Color 5
