--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -73,8 +73,10 @@ menu.bookmarks.add.default = Aktuelle Folie als Lesezeichen (Standard-K\u00FCrze
 menu.bookmarks.previous = Zur\u00FCck zur letzten Position
 menu.bookmarks.goto = Lesezeichen anspringen
 menu.slide.actions = Folienlinks
-menu.log = Log
-menu.about = \u00DCber
+menu.info.shortcuts = Tastenk\u00FCrzel
+menu.info.manual = Benutzeranleitung
+menu.info.log = Log
+menu.info.about = \u00DCber
 menu.stopwatch.stop = Stoppuhr zur\u00FCcksetzen
 menu.stopwatch.pause = Stoppuhr Starten/Anhalten
 menu.stopwatch.config = Stoppuhr Einstellungen
