--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -72,8 +72,10 @@ menu.bookmarks.add.default = Bookmark current slide (default shortcut)
 menu.bookmarks.previous = Go back to previous bookmark
 menu.bookmarks.goto = Go to bookmark
 menu.slide.actions = Slide Links
-menu.log = Log
-menu.about = About
+menu.info.shortcuts = Shortcuts
+menu.info.manual = Manual
+menu.info.log = Log
+menu.info.about = About
 menu.stopwatch.stop = reset stopwatch
 menu.stopwatch.pause = start/pause stopwatch
 menu.stopwatch.config = Stopwatch configuration
