presenter: added missing shortcuts to the ShortcutsView

--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -95,9 +95,9 @@ shortcut.doc.open = Open document
 shortcut.doc.close = Close document
 shortcut.slide.first = Select first slide
 shortcut.slide.last = Select last slide
-shortcut.slide.next = Next slide
+shortcut.slide.next = One slide further
 shortcut.slide.skip_next_10 = 10 slides further
-shortcut.slide.previous = Previous slide
+shortcut.slide.previous = One slide back
 shortcut.slide.skip_previous_10 = 10 slides back
 shortcut.slide.new = New whiteboard slide
 shortcut.slide.delete = Delete whiteboard slide
@@ -114,14 +114,19 @@ shortcut.tool.zoom.toggle = Zoom into the slide
 shortcut.tool.zoom.pan = Scroll zoomed slide
 shortcut.tool.clear = Delete all annotations on the slide
 shortcut.tool.text = Create texts
+shortcut.tool.text.highlighter = Highlight texts
 shortcut.tool.pen = Create pen annotations
 shortcut.tool.highlighter = Create highlighter annotations
 shortcut.tool.pointer = Pointer
+shortcut.tool.arrow = Create arrows
+shortcut.tool.line = Create lines
+shortcut.tool.rectangle = Create rectangle forms
+shortcut.tool.ellipse = Create ellipse forms
 shortcut.tool.eraser = Delete individual annotations
 shortcut.view.extend = Expand slide area
 shortcut.whiteboard.open = Open whiteboard
 shortcut.quiz.save = Save quiz
-shortcut.recording.pause = Pause recording
+shortcut.recording.pause.toggle = Pause recording and resume again
 shortcut.bookmark.new = Create bookmark
 shortcut.bookmark.goto = Go to bookmark
 shortcut.bookmark.current = Add slide to bookmarks
@@ -129,7 +134,7 @@ shortcut.bookmark.goto.last = Go to last bookmark
 shortcut.fullscreen = Activate and deactivate full screen mode
 shortcut.grid.show = Activate and deactivate grid
 shortcut.grid.show.lecturer = Show and hide grid only to presenters
-shortcut.timer.start = Start stopwatch
+shortcut.timer.start.toggle = Start and pause stopwatch
 shortcut.timer.pause = Pause stopwatch
 shortcut.timer.reset = Reset stopwatch
 shortcut.color.custom = Custom color
