--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -95,9 +95,9 @@ shortcut.doc.open = Dokument \u00f6ffnen
 shortcut.doc.close = Dokument schlieﬂen
 shortcut.slide.first = Erste Folie ausw\u00e4hlen
 shortcut.slide.last = Letzte Folien ausw\u00e4hlen
-shortcut.slide.next = N\u00e4chste Folie
+shortcut.slide.next = Eine Folie weiter
 shortcut.slide.skip_next_10 = 10 Folien weiter
-shortcut.slide.previous = Vorherige Folie
+shortcut.slide.previous = Eine Folie zur\u00fcck
 shortcut.slide.skip_previous_10 = 10 Folien zur\u00fcck
 shortcut.slide.new = Neue Whiteboard-Folie
 shortcut.slide.delete = Whiteboard-Folie l\u00f6schen
@@ -114,14 +114,19 @@ shortcut.tool.zoom.toggle = In die Folie zoomen
 shortcut.tool.zoom.pan = Gezoomte Folie scrollen
 shortcut.tool.clear = Alle Annotationen auf der Folie l\u00f6schen
 shortcut.tool.text = Texte erstellen
+shortcut.tool.text.highlighter = Texte hervorheben
 shortcut.tool.pen = Stift-Annotationen erstellen
 shortcut.tool.highlighter = Highlighter-Annotationen erstellen
 shortcut.tool.pointer = Pointer
+shortcut.tool.arrow = Pfeile erstellen
+shortcut.tool.line = Linien erstellen
+shortcut.tool.rectangle = Rechtecke erstellen
+shortcut.tool.ellipse = Ellipsen erstellen
 shortcut.tool.eraser = Einzelne Annotationen l\u00f6schen
 shortcut.view.extend = Folienbereich erweitern
 shortcut.whiteboard.open = Whiteboard \u00f6ffnen
 shortcut.quiz.save = Quiz abspeichern
-shortcut.recording.pause = Aufzeichnung pausieren
+shortcut.recording.pause.toggle = Aufzeichnung pausieren und wieder fortsetzen
 shortcut.bookmark.new = Lesezeichen erstellen
 shortcut.bookmark.goto = Lesezeichen anspringen
 shortcut.bookmark.current = Folie zu Lesezeichen hinzuf\u00fcgen
@@ -129,7 +134,7 @@ shortcut.bookmark.goto.last = Letztes Lesezeichen anspringen
 shortcut.fullscreen = Vollbildmodus aktivieren/deaktivieren
 shortcut.grid.show = Gitternetz aktivieren/deaktivieren
 shortcut.grid.show.lecturer = Gitternetz nur Pr\u00e4sentierenden zeigen/verstecken
-shortcut.timer.start = Stoppuhr starten
+shortcut.timer.start.toggle = Stoppuhr starten und pausieren
 shortcut.timer.pause = Stoppuhr pausieren
 shortcut.timer.reset = Stoppuhr zur\u00fccksetzen
 shortcut.color.custom = Benutzerdefinierte Farbe
