presenter: added shortcut filtering to the ShortcutsView

--- a/lect-presenter-swing/src/main/resources/views/shortcuts/shortcuts_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/shortcuts/shortcuts_en_US.properties
@@ -1,3 +1,4 @@
 shortcuts.title = Shortcuts
+shortcuts.filter.label = Filter by keyword:
 shortcuts.description = Description
 shortcuts.keys = Assignment
