presenter: fixed minor shortcut keys

--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -90,6 +90,7 @@ presence.type.classroom = Classroom
 presence.type.stream = Stream
 
 shortcut.app.close = Close application
+shortcut.app.help = Show application shortcuts
 shortcut.view.close = Close view
 shortcut.doc.open = Open document
 shortcut.doc.close = Close document
