--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -90,6 +90,7 @@ presence.type.classroom = H\u00f6rsaal
 presence.type.stream = Stream
 
 shortcut.app.close = Anwendung schlieﬂen
+shortcut.app.help = Tastenk\u00fcrzel der Anwendung zeigen
 shortcut.view.close = Ansicht schlieﬂen
 shortcut.doc.open = Dokument \u00f6ffnen
 shortcut.doc.close = Dokument schlieﬂen
