editor: added manual menu item

--- a/lect-editor-fx/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-editor-fx/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -16,5 +16,6 @@ menu.undo = R\u00fcckgangig
 menu.redo = Wiederherstellen
 menu.fullscreen = Vollbild
 menu.options = Einstellungen
-menu.log = Log
-menu.about = \u00dcber
+menu.info.manual = Benutzeranleitung
+menu.info.log = Log
+menu.info.about = \u00dcber
