--- a/lect-editor-fx/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-editor-fx/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -16,5 +16,6 @@ menu.undo = Undo
 menu.redo = Redo
 menu.fullscreen = Fullscreen
 menu.options = Settings
-menu.log = Log
-menu.about = About
+menu.info.manual = Manual
+menu.info.log = Log
+menu.info.about = About
