Draft: Feature/guest (#885)
* swing: Added PopUp menu + Ban action on user

* web-api: Added new ban user from course endpoint

* presenter-api: Added ban action

* presenter: Added ban action

* web-api: Added missing classes

* lect-presenter-api: Ensured can not ban myself

* lect-presenter-swing: Fixed test

* web-api: Added new ParticipantType

* lect-swing: Corrected tooltip for guests

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -85,6 +85,7 @@ text.message.to.organisators.short = Org.
 role.organisator = Organisator:in
 role.co-organisator = Co-Organisator:in
 role.participant = Teilnehmer:in
+role.guest-lecturer = Gastdozent:in
 
 presence.type.classroom = H\u00f6rsaal
 presence.type.stream = Stream
