--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -85,6 +85,7 @@ text.message.to.organisators.short = Org.
 role.organisator = Organisator
 role.co-organisator = Co-Organisator
 role.participant = Participant
+role.guest-lecturer = Guest Lecturer
 
 presence.type.classroom = Classroom
 presence.type.stream = Stream
