presenter: added Bachelorpraktikum chat extension

--- a/lect-core/src/main/resources/i18n/core_de_DE.properties
+++ b/lect-core/src/main/resources/i18n/core_de_DE.properties
@@ -22,6 +22,9 @@ button.download = Herunterladen
 button.update = Aktualisieren
 button.record = Aufzeichnen
 
+label.reply = antwortet
+label.edited = Bearbeitet
+
 file.description.pdf = PDF-Folien
 file.description.recording = Vorlesungsaufzeichnung
 file.description.wav = Wave Sound
