--- a/lect-core/src/main/resources/i18n/core_en_US.properties
+++ b/lect-core/src/main/resources/i18n/core_en_US.properties
@@ -22,6 +22,9 @@ button.download = Download
 button.update = Update
 button.record = Record
 
+label.reply = replies
+label.edited = Edited
+
 file.description.pdf = PDF Slides
 file.description.recording = Lecture Recording
 file.description.wav = Wave Sound
