--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -76,6 +76,7 @@ text.message = Nachricht
 text.message.time = Datum / Uhrzeit
 text.messages = Textnachrichten
 text.message.me = Ich
+text.message.me.dative = Mir
 text.message.privately = Privat
 text.message.recipient = {0} an {1}
 text.message.to.me = mich
@@ -145,3 +146,6 @@ shortcut.color.two = Farbe 2
 shortcut.color.three = Farbe 3
 shortcut.color.four = Farbe 4
 shortcut.color.five = Farbe 5
+
+stream.environment.stopped.by.message.title = Stream-Umgebung stoppen
+stream.environment.stopped.by.message = Stoppen der Stream-Umgebung bestehend aus Quiz, Messenger und Stream wurde initiiert. Initiator: {0}
