--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -76,6 +76,7 @@ text.message = Message
 text.message.time = Date / Time
 text.messages = Text Messages
 text.message.me = Me
+text.message.dative = Me
 text.message.privately = Privately
 text.message.recipient = {0} to {1}
 text.message.to.me = me
@@ -145,3 +146,6 @@ shortcut.color.two = Color 2
 shortcut.color.three = Color 3
 shortcut.color.four = Color 4
 shortcut.color.five = Color 5
+
+stream.environment.stopped.by.message.title = Stream-environment stopped
+stream.environment.stopped.by.message = Stop of Stream-environment consisting of quiz, messenger and stream was initiated. Initiator: {0}
