presenter: minor translation fixes

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -1,5 +1,5 @@
-audio.device.connected = Audiogerät verbunden
-audio.device.disconnected = Audiogerät getrennt
+audio.device.connected = Audioger\u00e4t verbunden
+audio.device.disconnected = Audioger\u00e4t getrennt
 
 bookmark.assign.warning = Lesezeichen konnte nicht erstellt werden
 bookmark.delete.error = Lesezeichen konnte nicht gel\u00f6scht werden
@@ -16,7 +16,7 @@ document.save.lecture = Vorlesung
 error = Fehler
 generic.error = Bitte kontaktieren Sie Ihren Systemadministrator. Vollst\u00e4ndige Details finden Sie im Anwendungsprotokoll.
 
-please.wait = Einen Moment bitte...
+please.wait = Einen Moment bitte ...
 
 messenger.starting = Der Messenger wird gestartet
 messenger.start.error = Messenger konnte nicht gestartet werden
