presenter: show error notification if a slide could not be recorded #912

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -27,6 +27,7 @@ recording.notification.title = Aufzeichnung
 recording.notification.message = Sind Sie sicher, dass Sie keine Aufzeichnung starten m\u00f6chten?
 recording.discard.error = Aufzeichnung konnte nicht verworfen werden
 recording.restore.missing.backup = Backup existiert nicht
+recording.slide.error = Folie konnte nicht aufgezeichnet werden
 recording.start.error = Aufzeichnung konnte nicht gestartet werden
 recording.start.device.error = Das Mikrofon \u00AB{0}\u00BB ist nicht angeschlossen
 recording.stop.confirm.title = Aufzeichnung beenden
