--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -27,6 +27,7 @@ recording.notification.title = Recording
 recording.notification.message = Are you sure you do not want to start a recording?
 recording.discard.error = Recording could not be discarded
 recording.restore.missing.backup = Backup does not exist
+recording.slide.error = Slide could not be recorded
 recording.start.error = Recording could not be started
 recording.start.device.error = Microphone \u00AB{0}\u00BB is not connected
 recording.stop.confirm.title = Stop recording
