presenter: remind to enable external displays on presentation start

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -23,6 +23,9 @@ messenger.start.error = Messenger konnte nicht gestartet werden
 messenger.stop.error = Messenger konnte nicht gestoppt werden
 messenger.window.title = Messenger
 
+displays.notification.title = Externe Bildschirme
+displays.notification.message = Sind Sie sicher, dass Sie keine externen Bildschirme aktivieren m\u00f6chten?
+
 recording.notification.title = Aufzeichnung
 recording.notification.message = Sind Sie sicher, dass Sie keine Aufzeichnung starten m\u00f6chten?
 recording.discard.error = Aufzeichnung konnte nicht verworfen werden
