--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -23,6 +23,9 @@ messenger.start.error = Messenger could not be started
 messenger.stop.error = Messenger could not be stopped
 messenger.window.title = Messenger
 
+displays.notification.title = External screens
+displays.notification.message = Are you sure you don't want to enable external screens?
+
 recording.notification.title = Recording
 recording.notification.message = Are you sure you do not want to start a recording?
 recording.discard.error = Recording could not be discarded
