presenter-api: fixed restarting minimized windows for sharing #954

--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -43,6 +43,7 @@ stream.starting = Starting stream
 stream.start.error = Stream could not be started
 stream.stop.error = Stream could not be stopped
 stream.screen.share.error = Screen-sharing could not be started
+stream.screen.share.error.message = Please note that minimized windows cannot be shared
 stream.camera.error.title = Camera failure
 stream.camera.error.message = The camera \u00AB{0}\u00BB is not available for streaming. Make sure that no other application is accessing this camera.
 stream.closed.by.remote.host = Stream was closed by the remote host
