--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -43,6 +43,7 @@ stream.starting = Der Stream wird gestartet
 stream.start.error = Stream konnte nicht gestartet werden
 stream.stop.error = Stream konnte nicht gestoppt werden
 stream.screen.share.error = Bildschirm konnte nicht geteilt werden
+stream.screen.share.error.message = Bitte beachten Sie, dass minimierte Fenster nicht geteilt werden können
 stream.camera.error.title = Kamerafehler
 stream.camera.error.message = Die Kamera \u00AB{0}\u00BB ist f\u00fcr den Stream nicht verf\u00fcgbar. Stellen Sie sicher, dass keine andere Anwendung auf diese Kamera zugreift.
 stream.closed.by.remote.host = Der Stream wurde vom entfernten Host geschlossen
