editor: added feature to insert PDF pages

--- a/lect-editor-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-editor-api/src/main/resources/i18n/dict_de_DE.properties
@@ -1,5 +1,6 @@
 cut.recording.error = Aufzeichnung konnte nicht geschnitten werden
 delete.page.error = Seite konnte nicht entfernt werden
+insert.page.error = Seite konnte nicht eingef\u00fcgt werden
 replace.page.error = Seite konnte nicht ersetzt werden
 move.page.duration.low.title = Information: Kurze Seitenanzeigedauer
 move.page.duration.low.text = Die Seite {0} wird nur für {1} Sekunden angezeigt.
