--- a/lect-editor-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-editor-api/src/main/resources/i18n/dict_en_US.properties
@@ -1,5 +1,6 @@
 cut.recording.error = Recording could not be cut
 delete.page.error = Page could not be deleted
+insert.page.error = Page could not be inserted
 replace.page.error = Page could not be replaced
 move.page.duration.low.title = Information: Short Page Duration
 move.page.duration.low.text = The page {0} will be shown for only {1} seconds.
