--- a/lect-editor-fx/src/main/resources/views/media-track-controls/media-track-controls_de_DE.properties
+++ b/lect-editor-fx/src/main/resources/views/media-track-controls/media-track-controls_de_DE.properties
@@ -2,6 +2,7 @@ media.undo = R\u00fcckg\u00e4ngig
 media.redo = Wiederherstellen
 media.cut = Ausschneiden
 media.collapse.selection = Auswahl reduzieren
+media.insert.page = Seite einf\u00fcgen
 media.delete.page = Aktuelle Seite entfernen
 media.replace.page = Aktuelle Seite ersetzen
 media.import.recording = Aufzeichnung importieren
