--- a/lect-editor-fx/src/main/resources/views/media-track-controls/media-track-controls_en_US.properties
+++ b/lect-editor-fx/src/main/resources/views/media-track-controls/media-track-controls_en_US.properties
@@ -2,6 +2,7 @@ media.undo = Undo
 media.redo = Redo
 media.cut = Cut
 media.collapse.selection = Collapse selection
+media.insert.page = Insert page
 media.delete.page = Delete current page
 media.replace.page = Replace current page
 media.import.recording = Import recording
