presenter: refactored screen inhibition config usage

--- a/lect-presenter-swing/src/main/resources/views/display-settings/display-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/display-settings/display-settings_de_DE.properties
@@ -1,3 +1,4 @@
+display.settings.screen.power.plan = Bildschirm nach Energiesparplan ausschalten
 display.settings.auto.presentation = Automatisch im Pr\u00e4sentations-Modus starten
 display.settings.notify.to.activate = Warnung bei nicht aktivierten Bildschirmen anzeigen
 display.settings.background.color = Bildschirm Hintergrundfarbe
