--- a/lect-presenter-swing/src/main/resources/views/display-settings/display-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/display-settings/display-settings_en_US.properties
@@ -1,3 +1,4 @@
+display.settings.screen.power.plan = Turn off the screen according to power plan
 display.settings.auto.presentation = Automatically start in presentation mode
 display.settings.notify.to.activate = Show warning if screens are not activated
 display.settings.background.color = Screen background color
