presenter: added stream service heartbeat #969

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -13,6 +13,9 @@ bookmark.removed = Lesezeichen gel\u00f6scht: {0}
 document.save.error = Dokument konnte nicht gespeichert werden
 document.save.lecture = Vorlesung
 
+heartbeat.error = Warnung
+heartbeat.error.message = Der Streaming-Dienst ist nicht erreichbar. Bitte \u00fcberpr\u00fcfen Sie die Verbindung.
+
 error = Fehler
 generic.error = Bitte kontaktieren Sie Ihren Systemadministrator. Vollst\u00e4ndige Details finden Sie im Anwendungsprotokoll.
 
