--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -13,10 +13,13 @@ bookmark.removed = Bookmark removed: {0}
 document.save.error = Document could not be saved
 document.save.lecture = Lecture
 
+heartbeat.error = Error
+heartbeat.error.message = The streaming service is not available. Please check the connection.
+
 error = Error
 generic.error = Please contact your system administrator. For complete details, see the application log.
 
-please.wait = One moment please ...
+please.wait = One moment, please ...
 
 messenger.starting = Starting Messenger
 messenger.start.error = Messenger could not be started
