presenter: refactored Stopwatch

--- a/lect-presenter-swing/src/main/resources/views/stopwatchConfig/stopwatchConfig_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/stopwatchConfig/stopwatchConfig_de_DE.properties
@@ -1,4 +1,4 @@
 stopwatch.settings.stopwatch = Stoppuhr
 stopwatch.settings.timer = Timer
-start.stopwatch.start = Übernehmen
-stopwatch.settings.setTime = Zeit Einstellen (Format: hh:mm:ss)
+stopwatch.save = Übernehmen
+stopwatch.settings.setTime = Zeit Einstellen (Format: hh:mm)
