--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -31,6 +31,7 @@ menu.notes.position = Position der Notizen
 menu.note.slide.position = Position der Notiz-Folien
 menu.note.slide.below.preview = Unter der Folienvorschau
 menu.participants.position = Position der Teilnehmer:innen
+menu.participant.video.position = Position der Videos von Teilnehmer:innen
 menu.preview.position = Position der Folienvorschau
 menu.speech.position = Position des Redebeitrags
 menu.speech.position.above.preview = \u00DCber der Folienvorschau
