feat: added participant talking feature and ParticipantVideoLayout option

--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -96,6 +96,9 @@ role.co-organisator = Co-Organisator:in
 role.participant = Teilnehmer:in
 role.guest-lecturer = Gastdozent:in
 
+participant.layout.gallery = Galerie
+participant.layout.speaker = Sprecher:in
+
 presence.type.classroom = H\u00f6rsaal
 presence.type.stream = Stream
 
