--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -76,7 +76,7 @@ message.slide.create.error = Message slide could not be created
 service.timeout.error = The service is currently not available. If the error occurs permanently, please contact your trusted administrator.
 
 open.document = loading document
-open.document.error = Document could not be opened
+open.document.error = The Document could not be opened
 open.page.file.error = The file could not be opened
 open.page.uri.error = The link could not be opened
 
@@ -95,6 +95,9 @@ role.organisator = Organisator
 role.co-organisator = Co-Organisator
 role.participant = Participant
 role.guest-lecturer = Guest Lecturer
+
+participant.layout.gallery = Gallery
+participant.layout.speaker = Speaker
 
 presence.type.classroom = Classroom
 presence.type.stream = Stream
