feat: add participant video layout settings

--- a/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_de_DE.properties
@@ -6,3 +6,5 @@ stream.settings.screen.share = Bildschirmfreigabe
 stream.settings.screen.share.profile = Profil
 stream.settings.screen.share.profile.still = Standbild (niedrige Bildrate)
 stream.settings.screen.share.profile.motion = Bewegtes Bild (hohe Bildrate)
+stream.settings.video.layout = Videolayout
+stream.settings.video.layout.window = Videolayout im externen Fenster
