--- a/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
@@ -6,3 +6,5 @@ stream.settings.screen.share = Screen Sharing
 stream.settings.screen.share.profile = Profile
 stream.settings.screen.share.profile.still = Still Image (low frame rate)
 stream.settings.screen.share.profile.motion = Motion Image (high frame rate)
+stream.settings.video.layout = Video Layout
+stream.settings.video.layout.window = Video layout in the external window
