feat: show participant cam video in tab and external window (#998)
* feat: added participant video positioning

* feat: wired presenters and views for participant video positioning

* feat: removed speech peer-view

* feat: show speech peer-view within tabs and external frame

* feat: receive local video frames

* feat: layout PeerViews in their container

* feat: new VideoTileLayout for video conferencing scenarios

* refactor: refined model-view-presenter pattern for peer views

* fix: peer view removal

* fix: crashes while copping and scaling a video frame

* refactor: mapping peer-view to peer-context

* refactor: removed local and remove video frame events

* refactor: bind peer-view to peer-context

* refactor: bind peer-view to peer-context

* refactor: use JanusParticipantContext for speech management

* fix: peer-view states

* fix: swing peer-view media buttons

* refactor: removed old code

* refactor: updated Janus create room message to enable audio level

* feat: added participant talking feature and ParticipantVideoLayout option

* feat: update participant video layout

* refactor: added ParticipantViewCollection

* feat: add participant video layout settings

--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_de_DE.properties
@@ -31,9 +31,8 @@ menu.notes.position = Position der Notizen
 menu.note.slide.position = Position der Notiz-Folien
 menu.note.slide.below.preview = Unter der Folienvorschau
 menu.participants.position = Position der Teilnehmer:innen
+menu.participant.video.position = Position der Videos von Teilnehmer:innen
 menu.preview.position = Position der Folienvorschau
-menu.speech.position = Position des Redebeitrags
-menu.speech.position.above.preview = \u00DCber der Folienvorschau
 menu.left = Links
 menu.bottom = Unten
 menu.right = Rechts
