--- a/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-menu/main-menu_en_US.properties
@@ -30,9 +30,8 @@ menu.notes.position = Notes position
 menu.note.slide.position = Slide note position
 menu.note.slide.below.preview = Below the slide preview
 menu.participants.position = Participants position
+menu.participant.video.position = Participant video position
 menu.preview.position = Slide preview position
-menu.speech.position = Speech position
-menu.speech.position.above.preview = Above the slide preview
 menu.left = Left
 menu.bottom = Bottom
 menu.right = Right
