fix: ui layout glitches around video tiles #1002

--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_de_DE.properties
@@ -6,7 +6,7 @@ slides.message.send = Senden
 slides.messages = Nachrichten
 slides.no.messages = Keine Nachrichten
 slides.participants = Teilnehmer:innen
-slides.participant.video = Teilnehmer:in
+slides.participant.video = Videos
 slides.no.participants = Keine Teilnehmer:innen
 slides.slide.preview = Folienvorschau
 slides.speech = Redebeitrag
