--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
@@ -6,7 +6,7 @@ slides.message.send = Send
 slides.messages = Messages
 slides.no.messages = No messages
 slides.participants = Participants
-slides.participant.video = Participant
+slides.participant.video = Videos
 slides.no.participants = No participants
 slides.slide.preview = Slides preview
 slides.speech = Speech
