feat: add AutostartRecordingHandler

--- a/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_en_US.properties
@@ -30,7 +30,7 @@ displays.notification.title = External screens
 displays.notification.message = Are you sure you don't want to enable external screens?
 
 recording.notification.title = Recording
-recording.notification.message = Are you sure you do not want to start a recording?
+recording.notification.message = Your microphone is muted. Do you want to unmute the microphone and start the recording?
 recording.discard.error = Recording could not be discarded
 recording.restore.missing.backup = Backup does not exist
 recording.slide.error = Slide could not be recorded
