--- a/lect-presenter-swing/src/main/resources/views/recording-settings/recording-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/recording-settings/recording-settings_en_US.properties
@@ -1,3 +1,4 @@
+recording.settings.autostart.record = Autostart recording when a lecture begins
 recording.settings.audio.format = Audio format
 recording.settings.directory = Recording directory
 recording.settings.notify.to.record = Display a warning message when the recording is not started
