--- a/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_de_DE.properties
@@ -1,5 +1,5 @@
 stream.settings.access.token = Zugriffstoken
-stream.settings.record = Stream automatisch aufzeichnen
+stream.settings.record = Automatisch aufzeichnen
 stream.settings.server.name = Server
 stream.settings.web.api = Web-API
 stream.settings.screen.share = Bildschirmfreigabe
