--- a/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
@@ -1,5 +1,5 @@
 stream.settings.access.token = Access Token
-stream.settings.record = Record stream automatically
+stream.settings.record = Record automatically
 stream.settings.server.name = Server
 stream.settings.web.api = Web API
 stream.settings.screen.share = Screen Sharing
