--- a/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
+++ b/lect-presenter-api/src/main/resources/i18n/dict_de_DE.properties
@@ -30,7 +30,7 @@ displays.notification.title = Externe Bildschirme
 displays.notification.message = Sind Sie sicher, dass Sie keine externen Bildschirme aktivieren m\u00f6chten?
 
 recording.notification.title = Aufzeichnung
-recording.notification.message = Sind Sie sicher, dass Sie keine Aufzeichnung starten m\u00f6chten?
+recording.notification.message = Ihr Mikrofon ist stummgeschaltet. M\u00f6chten Sie die Stummschaltung aufheben und die Aufzeichnung starten?
 recording.discard.error = Aufzeichnung konnte nicht verworfen werden
 recording.restore.missing.backup = Backup existiert nicht
 recording.slide.error = Folie konnte nicht aufgezeichnet werden
