fix: improve access token validation and error handling in stream settings #380

--- a/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_de_DE.properties
+++ b/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_de_DE.properties
@@ -1,4 +1,7 @@
 stream.settings.access.token = Zugriffstoken
+stream.settings.access.token.error.generic = Ein Fehler ist bei der Validierung des Zugriffstokens aufgetreten.
+stream.settings.access.token.error.unauthorized = Ungültiges Zugriffstoken.
+stream.settings.access.token.error.host = Der Server ist nicht erreichbar. Bitte überprüfen Sie die Serveradresse und Ihre Internetverbindung.
 stream.settings.record = Automatisch aufzeichnen
 stream.settings.server.name = Server
 stream.settings.web.api = Web-API
