--- a/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/stream-settings/stream-settings_en_US.properties
@@ -1,4 +1,7 @@
 stream.settings.access.token = Access Token
+stream.settings.access.token.error.generic = An error occurred while validating the access token.
+stream.settings.access.token.error.unauthorized = Invalid access token.
+stream.settings.access.token.error.host = Server is not reachable. Please check the server address and your internet connection.
 stream.settings.record = Record automatically
 stream.settings.server.name = Server
 stream.settings.web.api = Web API
