fix(presenter): update phrasing for speech request #1032

--- a/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
+++ b/lect-presenter-swing/src/main/resources/views/main-slides/main-slides_en_US.properties
@@ -14,7 +14,7 @@ slides.currently.no.speech = Currently no speach
 slides.quiz.stop = Stop
 slides.slide.notes = Slide notes
 
-speech.requested = raised his hand
+speech.requested = raised the hand
 speech.accept = Accept
 speech.accepted = Accepted
 speech.canceled = Canceled
